<resources>
    <string name="app_name">ToDoNxt</string>
    <string name="format_date_time">MM/dd/YYYY, hh:mm a</string>
    <string name="format_date">MM/dd/YYYY</string>
    <string name="format_time">hh:mm a</string>

    <string name="greeting_morning">Good morning!</string>
    <string name="greeting_day">Good afternoon!</string>
    <string name="greeting_evening">Good evening!</string>
    <string name="greeting_night">Good night!</string>
    <string name="all_day">All day</string>
    <string name="okay_abbr">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_task_details">Task Details</string>
    <string name="title_create_task">Create task</string>
    <string name="title_labels">Labels</string>
    <string name="title_projects">Projects</string>
    <string name="title_create_label">Create label</string>

    <string name="tasks_for_today">Today\'s Tasks</string>
    <string name="no_tasks_today">There are no tasks today</string>
    <string name="button_add_task">Create task</string>

    <string name="no_tasks">No tasks were found</string>
    <string name="title_done_tasks">Done tasks</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="add_description">Add description</string>
    <string name="remove_description">Remove description</string>
    <string name="add_date">Add date</string>
    <string name="add_time">Add time</string>
    <string name="add_label">Add label</string>
    <string name="add_more_labels">Add more labels</string>
    <string name="no_description">No description</string>
    <string name="no_date">No date</string>
    <string name="no_time">No time</string>
    <string name="button_finish_task">Finish task</string>
    <string name="menu_item_delete_task">Delete task</string>
    <string name="menu_item_change_title">Change title</string>
    <string name="dialog_title_update_title">Title</string>
    <string name="dialog_title_update_description">Description</string>
    <string name="dialog_title_delete_task">Delete task</string>
    <string name="dialog_text_delete_task">Do you really want to delete the task \'%1$s\'?</string>

    <string name="label_name">Label name</string>
    <string name="select_labels">Select labels</string>
    <string name="no_labels">No labels were found</string>
    <string name="title_color">Color</string>

    <string name="pick_color">Pick color</string>

    <string name="dialog_change_or_delete_title_change">Change %1$s</string>
    <string name="dialog_change_or_delete_title_delete">Delete %1$s</string>

    <string name="content_description_icon_clock">Clock icon</string>
    <string name="content_description_icon_calendar">Calendar icon</string>
    <string name="content_description_icon_edit">Pen icon</string>
    <string name="content_description_icon_delete">Trash icon</string>
    <string name="content_description_icon_chevron_up_down">Toggle visibility</string>
    <string name="content_description_icon_check">Check icon</string>

    <string name="color_title_red">Shades of red</string>
    <string name="color_title_pink">Shades of pink</string>
    <string name="color_title_purple">Shades of purple</string>
    <string name="color_title_deep_purple">Shades of deep purple</string>
    <string name="color_title_indigo">Shades of indigo</string>
    <string name="color_title_blue">Shades of blue</string>
    <string name="color_title_light_blue">Shades of light blue</string>
    <string name="color_title_cyan">Shades of cyan</string>
    <string name="color_title_teal">Shades of teal</string>
    <string name="color_title_green">Shades of green</string>
    <string name="color_title_light_green">Shades of light green</string>
    <string name="color_title_lime">Shades of lime</string>
    <string name="color_title_yellow">Shades of yellow</string>
    <string name="color_title_amber">Shades of amber</string>
    <string name="color_title_orange">Shades of orange</string>
    <string name="color_title_deep_orange">Shades of deep orange</string>
    <string name="color_title_brown">Shades of brown</string>
    <string name="color_title_gray">Shades of gray</string>
    <string name="color_title_blue_gray">Shades of blue gray</string>

</resources>