<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appNavigation"
    app:startDestination="@id/fragmentDashboard">

    <fragment
        android:id="@+id/fragmentDashboard"
        android:name="de.todonxt.feature.dashboard.presentation.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/actionDashboardToAddTask"
            app:destination="@id/fragmentAddTask" />
        <action
            android:id="@+id/actionDashboardToTaskList"
            app:destination="@id/fragmentTaskList" />
    </fragment>

    <fragment
        android:id="@+id/fragmentTaskList"
        android:name="de.todonxt.feature.task_list.presentation.TaskListFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_task_list" >
        <action
            android:id="@+id/actionTaskListToAddTask"
            app:destination="@id/fragmentAddTask" />
    </fragment>

    <fragment
        android:id="@+id/fragmentAddTask"
        android:name="de.todonxt.feature.task_add.presentation.CreateTaskFragment"
        android:label="@string/title_create_task"
        tools:layout="@layout/fragment_create_task" />

</navigation>