<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.todonxt.feature.task_add.presentation.CreateTaskViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/textFieldTitle"
            style="@style/BorderlessTextFieldLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusForward="@id/textFieldDescription"
            android:text="@={viewModel.title}" />

        <EditText
            android:padding="12dp"
            android:id="@+id/textFieldDescription"
            style="@style/BorderlessTextFieldNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={viewModel.description}" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDate"
                style="@style/Widget.Material3.Chip.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{viewModel.dateSet}" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTime"
                style="@style/Widget.Material3.Chip.Input.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isVisible="@{viewModel.timeSet}" />

        </com.google.android.material.chip.ChipGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/save"
                app:icon="@drawable/ic_save"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddDate"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date"
                    app:icon="@drawable/ic_calendar_today"
                    app:isGone="@{viewModel.dateSet}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddTime"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/add_time"
                    app:icon="@drawable/ic_clock"
                    app:isGone="@{viewModel.timeSet}" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</layout>