<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textFieldTitle"
        style="@style/BorderlessTextFieldLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/containerColorView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <View
                android:id="@+id/colorView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:layout_toStartOf="@id/buttonOpenColorSelector"
            android:layout_toEndOf="@id/containerColorView"
            android:text="@string/title_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOpenColorSelector"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:icon="@drawable/ic_arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            app:icon="@drawable/ic_save" />

    </RelativeLayout>

</LinearLayout>