<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="de.todonxt.feature.task_list.presentation.TaskListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="ifContentScrolls"
            android:paddingBottom="88dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/no_tasks"
                    app:isGone="@{viewModel.anyOpenTasks}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingHorizontal="16dp"
                    app:isVisible="@{viewModel.anyOpenTasks}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="2"
                    tools:listitem="@layout/rvi_task" />

                <com.google.android.material.card.MaterialCardView
                    style="@style/DefaultCard"
                    isVisible="@{viewModel.anyDoneTasks}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewTasks">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/headerDoneTasks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/TextAppearance.Material3.TitleLarge"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/title_done_tasks" />

                            <ImageView
                                android:id="@+id/iconHeaderDoneTasks"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/content_description_icon_chevron_up_down"
                                android:src="@drawable/ic_chevron_down"
                                app:tint="?attr/colorOnSecondaryContainer" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewTasksDone"
                            isVisible="@{viewModel.containerDoneTasksVisible}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="2"
                            tools:listitem="@layout/rvi_task_done" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/buttonCreateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_add_task"
            app:icon="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>