<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="de.todonxt.feature.task_details.presentation.TaskDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTitle"
                style="@style/TextAppearance.Material3.DisplaySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.title}"
                android:textAlignment="center"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/containerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <com.google.android.material.textview.MaterialTextView
                    android:text="@{viewModel.description}"
                    android:id="@+id/textViewDescription"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/buttonEditDescription" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEditDescription"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="-1dp"
                    app:icon="@drawable/ic_edit" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/containerNoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewNoDescription"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/no_description"
                    android:textStyle="italic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddDescription"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_plus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_icon_calendar"
                    android:src="@drawable/ic_calendar_today" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewDate"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEditDate"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerNoDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewNoDate"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/no_date"
                    android:textStyle="italic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddDate"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_plus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_icon_clock"
                    android:src="@drawable/ic_clock" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTime"
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEditTime"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_edit" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerNoTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewNoTime"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/no_time"
                    android:textStyle="italic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAddTime"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_plus" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFinishTask"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button_finish_task"
                app:icon="@drawable/ic_check" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>